--- a/prototype/index.html
+++ b/prototype/index.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      body {
+      html, body {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
+      }
+
+      *,
+      *:before,
+      *:after {
+        box-sizing: inherit;
       }
 
       .main {
@@ -29,7 +35,6 @@
       .lists-container {
         height: 100%;
         background: black;
-        padding: 40px;
         display: flex;
       }
 
@@ -37,7 +42,8 @@
         display: flex;
         flex-direction: column;
         background-color: pink;
-        /* max-height: 80%; */
+        height: min-content;
+        max-height: 85%;
         margin: 50px;
         width: 500px;
       }
@@ -48,7 +54,7 @@
       }
 
       .cards-container {
-        /* height: 100%; */
+        height: 100%;
         max-height: 100%;
         overflow-y: auto;
         background-color: cadetblue;
@@ -75,43 +81,34 @@
 
       <div class="lists-container">
         <div class="list">
-          <div class="list-title">
-            Title
-          </div>
+          <div class="list-title">Title</div>
           <div class="cards-container">
-            <div class="card">
-              Card 1
-              </div>
-            <!-- </div>
-            <div class="card">
-              Card 1
-            </div>
-            <div class="card">
-              Card 1
-            </div>
-            <div class="card">
-              Card 1
-            </div>
-            <div class="card">
-              Card 1
-            </div>
-            <div class="card">
-              Card 1
-            </div>
-            <div class="card">
-              Card 1
-            </div>
-            <div class="card">
-              Card 1
-            </div>
-            <div class="card">
-              Card 1
-            </div> -->
-            
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
           </div>
-          <div class="add">
-            Add Card
+          <div class="add">Add Card</div>
+        </div>
+        <div class="list">
+          <div class="list-title">Title</div>
+          <div class="cards-container">
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
+            <div class="card">Card 1</div>
           </div>
+          <div class="add">Add Card</div>
         </div>
       </div>
     </div>
